--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/overlays.css">
+    <link rel="stylesheet" href="styles/configuration.css">
   </head>
   <body>
+      <div id="backdrop"></div>
     <header id="main-header">
       
         <h1>Play Tic, Tac, Toe</h1>
@@ -22,10 +25,10 @@
       
     </header>
     <main>
-      <aside>
+      <aside class="modal" id="config-overlay">
         <h2>Choose your name</h2>
         <form>
-          <div>
+          <div class="form-control">
             <label for="playername">Player name</label>
             <input type="text" name="username" id="playername" />
           </div>
