--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/overlays.css">
     <link rel="stylesheet" href="styles/configuration.css">
+    <link rel="stylesheet" href="styles/game.css">
   </head>
   <body>
       <div id="backdrop"></div>
@@ -61,16 +62,16 @@
       </section>
 
       <section id="active-game">
-        <article>
-          <h3>You won! <span id="winner-name">Player Name</span>!</h3>
+        <article id="game-over">
+          <h2>You won! <span id="winner-name">Player Name</span>!</h3>
           <p>Click "Start New Game" above, to start a new game!</p>
         </article>
 
         <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
+        <ol id="game-board">
+          <li class="disabled">x</li>
+          <li>o</li>
+          <li>x</li>
 
           <li></li>
           <li></li>
