manage game round(turns) & field selection

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </article>
           </li>
         </ol>
-        <button class="btn">Start New Game</button>
+        <button class="btn" id="start-game-btn">Start New Game</button>
       </section>
 
       <section id="active-game">
@@ -75,9 +75,9 @@
 
         <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
         <ol id="game-board">
-          <li class="disabled">x</li>
-          <li>o</li>
-          <li>x</li>
+          <li></li>
+          <li></li>
+          <li></li>
 
           <li></li>
           <li></li>
